[tool.poetry]
name = "auth_server"
version = "0.1.0"
description = "Babylon Auth Server"
authors = ["Alan Ponte <alanjponte@gmail.com>"]
readme = "README.md"
packages = [{ include = "auth_server"}]

[tool.poetry.dependencies]
python = "^3.13"

# Secrets manager
hvac = "2.3.0"
fastapi = "^0.120.2"
uvicorn = "^0.38.0"
pydantic = "^2.12.3"
httpx = "^0.28.1"

[tool.poetry.group.test.dependencies]
black = "25.1.0"
mypy = "^1.17.1"
pylint = "3.3.7"
pytest="^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
